--- a/ColeccionDeJuegos/Base.lproj/Main.storyboard
+++ b/ColeccionDeJuegos/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RNE-zp-OUx">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RNE-zp-OUx">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -32,29 +32,32 @@
             </objects>
             <point key="canvasLocation" x="937" y="-35"/>
         </scene>
-        <!--View Controller-->
+        <!--Juego View Controller-->
         <scene sceneID="SIn-g5-h3g">
             <objects>
-                <viewController id="Npf-xi-Auh" sceneMemberID="viewController">
+                <viewController id="Npf-xi-Auh" customClass="JuegoViewController" customModule="ColeccionDeJuegos" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="mmw-dm-7Pd">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yfn-KO-dmt">
-                                <rect key="frame" x="67" y="101" width="240" height="128"/>
+                                <rect key="frame" x="67" y="101" width="240" height="215"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Titulo" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1Pk-ER-fqt">
-                                <rect key="frame" x="67" y="237" width="240" height="30"/>
+                                <rect key="frame" x="67" y="335" width="240" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mgW-Lj-Kvb">
-                                <rect key="frame" x="67" y="275" width="240" height="30"/>
+                                <rect key="frame" x="67" y="390" width="240" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Agregar"/>
+                                <connections>
+                                    <action selector="agregarTapped:" destination="Npf-xi-Auh" eventType="touchUpInside" id="4bb-q9-4B4"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -62,10 +65,22 @@
                     </view>
                     <navigationItem key="navigationItem" id="lSo-fA-vuv">
                         <rightBarButtonItems>
-                            <barButtonItem systemItem="camera" id="TMI-c5-A1g"/>
-                            <barButtonItem title="Fotos" id="1Dy-CR-0g6"/>
+                            <barButtonItem systemItem="camera" id="TMI-c5-A1g">
+                                <connections>
+                                    <action selector="camaraTapped:" destination="Npf-xi-Auh" id="eHK-hv-W8L"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem title="Fotos" id="1Dy-CR-0g6">
+                                <connections>
+                                    <action selector="fotosTapped:" destination="Npf-xi-Auh" id="8YX-Bx-XbH"/>
+                                </connections>
+                            </barButtonItem>
                         </rightBarButtonItems>
                     </navigationItem>
+                    <connections>
+                        <outlet property="JuegoImageView" destination="yfn-KO-dmt" id="3KN-XZ-Yfh"/>
+                        <outlet property="tituloTextField" destination="1Pk-ER-fqt" id="PaL-iL-hwD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Qa-Gq-uId" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
