--- a/ColeccionDeJuegos/Base.lproj/Main.storyboard
+++ b/ColeccionDeJuegos/Base.lproj/Main.storyboard
@@ -18,16 +18,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="b5t-G5-bPL">
-                                <rect key="frame" x="0.0" y="64" width="375" height="128"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="b5t-G5-bPL">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="b5t-G5-bPL" secondAttribute="trailing" id="J2S-GA-aza"/>
+                            <constraint firstItem="b5t-G5-bPL" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="KXi-7l-yQf"/>
                             <constraint firstItem="b5t-G5-bPL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="KeP-GP-GEz"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="b5t-G5-bPL" secondAttribute="bottom" id="WiT-zl-Xkb"/>
+                            <constraint firstItem="b5t-G5-bPL" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="lju-dr-Cj2"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="b5t-G5-bPL" secondAttribute="bottom" id="llP-Hh-4WT"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -45,7 +47,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="937" y="-35"/>
+            <point key="canvasLocation" x="936.79999999999995" y="-35.532233883058474"/>
         </scene>
         <!--Juego View Controller-->
         <scene sceneID="SIn-g5-h3g">
